Prevent too much inheritance of styles for error/warning messages (#90)

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,11 +1,11 @@
-$text-error: #721c24;
-$bg-error: #ffc6c6;
-$border-error: #f00;
+$text-error: #721c24 !default;
+$bg-error: #ffc6c6 !default;
+$border-error: #f00 !default;
 
-$text-warning: #856404;
-$bg-warning: #ffffd8;
-$border-warning: #ff6;
+$text-warning: #856404 !default;
+$bg-warning: #ffffd8 !default;
+$border-warning: #ff6 !default;
 
-$font-family: verdana, geneva, tahoma, sans-serif;
-$font-size: 1.2rem;
-$font-weight: 700;
+$font-family: verdana, geneva, tahoma, sans-serif !default;
+$font-size: 1rem !default;
+$font-weight: 700 !default;
